sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:11: error: ')' expected but ',' found.
    for(i<-0 to getNombreValeurs() -2,-1){
                                     ^AlgCocktailSort1:20: error: illegal start of simple expression
  }
  ^