sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
	while(true){
    var count=0
    for(i<- 0 to getNombreValeurs()-2){
      if(!plusPetit(i,i+1)){
        echange(i,i+1)
        count+=1
      }
    }
    for(i<-0 to getNombreValeurs() -2,-1){
      if(!plusPetit(i,i-1)){
        echange(i,i-1)
        count+=1
      }
    }
    if(count<1){
      return 
    }
  }
}